Rollback getModifiers change